# agentalign-agenttrim

./: .gitignore  Cargo.toml  sonar-project.properties
agentalign/: Cargo.toml
agentalign/src/: lib.rs  main.rs
agentalign/src/mcp/: canonical.rs  capabilities.rs  claude.rs  codex.rs  copilot.rs  factory.rs  gemini.rs  interpolation.rs  mod.rs  strategy.rs  validation.rs  vscode.rs  windsurf.rs  zed.rs
agentalign/src/migration/: local_json.rs  mod.rs  secret_splitter.rs
agentalign/src/sync/: cache.rs  delta_merger.rs  mod.rs  transaction.rs
agentalign/src/tracking/: keychain.rs  mod.rs
agentalign/tests/: e2e_cli_sync.rs
agenttrim/: Cargo.toml
agenttrim/src/: lib.rs  main.rs  time_provider.rs
agenttrim/src/analyze/: ledger_reader.rs  mcp.rs  mod.rs  process_scanner.rs  safety_matrix.rs  skills.rs  static_scanner.rs  validation_hook.rs
agenttrim/src/prune/: backup.rs  mcp.rs  mod.rs  skills.rs  subprocess.rs
agenttrim/tests/: integration_prune_cycle.rs
shared/: Cargo.toml
shared/src/: error.rs  models.rs  traits.rs
