[package]
name = "agentalign"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentalign-shared = { path = "../shared" }
agenttrim = { path = "../agenttrim" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
uuid.workspace = true
sha2.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
walkdir = "2"
hex.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
